--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,126 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: whitesmoke;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root, body {
+  width: 100%;
+  height: 100%;
+  margin: 5px;
+  overflow-x: hidden;
+  font-family: 'Poppins', sans-serif;
+  -webkit-transition: all .4s ease;
+}
+
+
+.header_container {
+  width: 100%;
+  height: 200px;
+  Display: flex;
+  justify-content: space-around;
+  padding: 0px 10px;
+}
+
+.logo {
+  width: 100%;
+}
+
+.list_container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+.card_container {
+  position: relative;
+  padding: 0%;
+  margin: 0% 5px;
+  width: 15%;
+  height: 200px;
+}
+
+.card_background {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: orange;
+  top: 0;
+  left: 0;
+  animation-name: example;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+}
+.card_title {
+  position: absolute;
+  top: 25%;
+  right: 50%;
+  font-size: 2rem;
+  font-weight: 900;
+}
+
+
+@keyframes example {
+  0% {
+    border-radius: 50%;
+    transform: rotateX(50deg);
+    transform: rotateY(50deg);
+  }
+
+  25% {
+    border-radius: 37.5%;
+    transform: rotateX(100deg);
+  }
+
+  50% {
+    border-radius: 25%;
+    transform: rotateX(150deg);
+  }
+
+  75% {
+    border-radius: 12.5%;
+    transform: rotateX(200deg);
+  }
+
+  100% {
+    border-radius: 5%;
+    transform: rotateX(250deg);
+  }
+}
+
+
+
+.card_container_button {
+  position: relative;
+  padding: 0%;
+  margin: 0%;
+  width: 15%;
+  height: 200px;
+  border-radius: 25%;
+  background-color: aliceblue;
+}
+.card_background_button {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: aliceblue;
+  top: 0;
+  left: 0;
+  border-radius: 25%;
+}
+.card_title_button {
+  position:absolute;
+  top: 25%;
+  right: 50%;
+  font-size: 2rem;
+  font-weight: 900;
+}
+.card_container_button:hover {
+  background-color: aliceblue;
+  box-shadow:  5px 10px 18px #888888;
+}
+.card_background_button:hover {
+  background-color: aliceblue;
+  box-shadow:  5px 10px 18px #888888;
 }
